structure: add bootstrap files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page AlfamaWeb</title>
+
+    <link rel="stylesheet" href="assets/libs/bootstrap/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     
