feat: add initial navbar

--- a/index.html
+++ b/index.html
@@ -5,12 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page AlfamaWeb</title>
 
-    <link rel="stylesheet" href="assets/libs/bootstrap/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="assets/libs/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="assets/images/logo_alfama.png" width="200px" alt="" srcset="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Precatórios?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">A empresa</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Como funciona?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">FAQ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Depoimentos</a>
+                        </li>
+                        <li class="nav-item">
+                            <button class="btn ms-lg-3 btn-call">(00) 00000-0000</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
