feat: add about us section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         role="alert" 
         style="max-width: 400px;">
     </div>
-    <header>
-        <nav class="navbar navbar-expand-lg pt-4" data-bs-theme="dark">
+    <header id="hero">
+        <nav class="navbar navbar-expand-lg pt-lg-4" data-bs-theme="dark">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="assets/images/logo_alfama.png" width="200px" alt="Logo AlfamaWeb">
@@ -31,10 +31,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="">Precatórios?</a>
+                            <a class="nav-link" href="#hero">Precatórios?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">A empresa</a>
+                            <a class="nav-link" href="#about">A empresa</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="">Como funciona?</a>
@@ -53,7 +53,7 @@
             </div>
         </nav>
 
-        <section class="pt-4">
+        <section class="pt-lg-4">
             <div class="container">
                 <div class="row">
                     
@@ -179,10 +179,70 @@
             <i class="bi bi-whatsapp fs-4"></i>
         </a>
     </header>
-    <section class="about-section">
+    <section id="about" class="about-section pt-4 container">
+        <h2 class="fw-bold display-5 text-center pb-4">Lorem ipsum do or sit amet <span>consectetur</span></h2>
 
+        <div class="card mb-3 border-0">
+            <div class="row g-3">
+                <div class="col-md-6">
+                    <div class="card-body p-4">
+                        <h3 class="card-title fw-bold">Quem somos?</h3>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nam vehicula enim dui. Cras vitae euismod metus. In
+                            aliquam, urna posuere egestas dignissim, nulla dolor
+                        </p>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nam vehicula enim dui. Cras vitae euismod metus. In
+                            aliquam, urna posuere egestas dignissim, nulla dolor
+                            pretium risus, ac imperdiet erat erat quis nibh. Quisque
+                            viverra volutpat eros vitae vehicula. Pellentesque
+                            tincidunt, lacus eu tincidunt finibus.
+
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nam vehicula enim dui. Cras vitae euismod metus.
+                            Pellentesque tincidunt, lacus eu tincidunt finibus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="./assets/images/img2.png" class="img-fluid h-100 w-100 object-fit-cover" alt="...">
+                </div>
+            </div>
+        </div>
+
+        <div class="card mb-3 border-0"> 
+            <div class="row g-3">
+                <div class="col-md-6">
+                    <div class="card-body p-4">
+                        <h3 class="card-title fw-bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula enim dui.</h3>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nam vehicula enim dui. Cras vitae euismod metus. In
+                            aliquam, urna posuere egestas dignissim, nulla dolor
+                            pretium risus, ac imperdiet erat erat quis nibh. Quisque
+                            viverra volutpat eros vitae vehicula. Pellentesque tincidunt,
+                            lacus eu tincidunt finibus, tellus quam dapibus quam, nec
+                            lacinia nunc nulla nec lectus. Nulla eleifend enim at justo
+                            tristique, vulputate convallis turpis vestibulum. Nunc eget
+                            magna non velit aliquet imperdiet quis egestas leo.
+
+                            Pellentesque tincidunt, lacus eu tincidunt finibus, tellus
+                            quam dapibus quam, nec lacinia nunc nulla nec lectus.
+                            Nulla eleifend enim at justo tristique, vulputate convallis
+                            turpis vestibulum. Nunc eget magna non velit aliquet
+                            imperdiet quis egestas leo.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 order-md-first">
+                    <img src="./assets/images/img3.png" class="img-fluid h-100 w-100 object-fit-cover" alt="...">
+                </div>
+            </div>
+        </div>       
     </section>
-
     <button 
         type="button" 
         class="btn btn-primary btn-lg rounded-circle position-fixed bottom-0 end-0 m-4 z-3 invisible" 
