structure: add dockerfile and docker compose to run the project

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                     <div class="mb-3">
                                         <label for="inputValor" class="visually-hidden">Valor do precatório</label>
                                         <div class="input-group has-validation">
-                                            <span class="input-group-text"><span class="input-icon">R$</span></span>
+                                            <span class="input-group-text"><i class="fst-normal fw-bold lh-1" style="font-size: 1rem;">R$</i></span>
                                             <input type="text" name="valor" class="form-control" id="inputValor" placeholder="Valor do precatório" inputmode="decimal" required>
                                             <div class="invalid-tooltip">Informe o valor.</div>
                                         </div>
