fix: remove overflow

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <body>
     <div id="form-alert" 
         class="alert position-fixed top-0 end-0 m-3 z-3 shadow d-none" 
-        role="alert" 
-        style="max-width: 400px;">
+        role="alert">
     </div>
     <header id="hero">
         <nav class="navbar navbar-expand-lg pt-lg-4" data-bs-theme="dark">
@@ -179,7 +178,7 @@
         <a
             href="https://wa.me/5500000000000?text=Olá,%20gostaria%20de%20mais%20informações%20sobre%20precatórios" 
             target="_blank"
-            class="btn btn-whatsapp btn-lg rounded-circle position-absolute bottom-0 end-0 m-4 z-3 d-flex align-items-center justify-content-center shadow"
+            class="btn btn-whatsapp rounded-circle position-absolute bottom-0 end-0 m-4 d-flex align-items-center justify-content-center shadow"
             aria-label="Falar no WhatsApp">
             <i class="bi bi-whatsapp fs-4"></i>
         </a>
@@ -252,7 +251,7 @@
     <section id="how-works" class="container py-5">
         <h2 class="fw-bold display-5 text-center pb-4">Como funciona?</h2>
 
-        <div class="row g-5 mb-5">
+        <div class="row g-3 g-lg-5 mb-5">
             <div class="col-md-6">
                 <div class="position-relative mt-3">
                     <div class="position-absolute top-0 start-0 translate-middle-y ms-4 bg-custom-blue text-white step-badge shadow-sm rounded-pill">
@@ -619,7 +618,7 @@
 
     <button 
         type="button" 
-        class="btn btn-primary btn-lg rounded-circle position-fixed bottom-0 end-0 m-4 z-3 invisible" 
+        class="btn btn-primary rounded-circle position-fixed bottom-0 end-0 m-4 invisible" 
         id="btn-back-to-top"
         aria-label="Back to top">
         <i class="bi bi-arrow-up"></i>
